# dsv

./: .gitignore  ChangeLog.md  LICENSE  README.md  dsv.cabal
src/: DSV.hs
src/DSV/: CARD.hs  Contract.hs  Effect.hs  Logic.hs  Model.hs  Prelude.hs  Program.hs  Types.hs
src/DSV/Effect/: Bank.hs
src/DSV/Examples/: Bank.hs  Banks.hs  ThreeBools.hs
tests/: tests.hs
