name:                dsv
version:             0.1.0.0
synopsis:            Distributed store verifier
license:             GPL-3
license-file:        LICENSE
author:              octalsrc
maintainer:          octal@octalsrc.org
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     DSV
                     , DSV.Prelude
  other-modules:       DSV.Logic
                     , DSV.Program
  build-depends:       base >=4.10 && <4.11
                     , smtlib2
                     , smtlib2-debug
                     , smtlib2-pipe
                     , text >= 1.2.2.1
                     , turtle
                     , TypeCompose
                     , containers
                     , template-haskell

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base
                     , dsv
                     , smtlib2
                     , smtlib2-pipe
                     , smtlib2-debug
                     , text >= 1.2.2.1
                     , containers