name:                dsv
version:             0.1.0.0
synopsis:            Distributed store verifier
license:             GPL-3
license-file:        LICENSE
author:              octalsrc
maintainer:          octal@octalsrc.org
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     DSV
                     , DSV.Prelude
  other-modules:       DSV.Logic
                     , DSV.Program
  build-depends:       base >= 4.12.0 && < 4.13
                     , smtlib2 >= 1.0 && < 1.1
                     , smtlib2-pipe >= 1.0 && < 1.1
                     , text >= 1.2.3 && < 1.3
                     , turtle >= 1.5.13 && < 1.6
                     , TypeCompose >= 0.9.14 && < 0.10
                     , containers >= 0.6.0 && < 0.7
                     , template-haskell >= 2.14.0 && < 2.15

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base >= 4.12.0 && < 4.13
                     , dsv
                     , smtlib2 >= 1.0 && < 1.1
                     , smtlib2-pipe >= 1.0 && < 1.1
                     , text >= 1.2.3 && < 1.3
                     , containers >= 0.6.0 && < 0.7
                     , time
